deploy/templates/kyverno-inject-ca.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-launchpad-ca-cert
spec:
  rules:
    - name: inject-ca-cert
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
      mutate:
        patchStrategicMerge:
          spec:
            volumes:
              - name: ca-bundle
                configMap:
                  name: launchpad-ca-bundle
              - name: ca-pem
                configMap:
                  name: launchpad-ca-cert
            containers:
              - (name): "*"
                volumeMounts:
                  - name: ca-bundle
                    mountPath: /etc/ssl/certs/ca-certificates.crt
                    subPath: ca-certificates.crt
                    readOnly: true
                  - name: ca-pem
                    mountPath: /etc/ssl/certs/launchpad-ca.pem
                    subPath: ca.pem
                    readOnly: true
                  - name: ca-bundle
                    mountPath: /etc/profile.d/launchpad-ca.sh
                    subPath: launchpad-ca.sh
                    readOnly: true
                env:
                  - name: NODE_EXTRA_CA_CERTS
                    value: /etc/ssl/certs/launchpad-ca.pem
